apollo-federation/src/connectors/json_selection/snapshots/error_snapshots.snap
---
source: apollo-federation/src/connectors/json_selection/parser.rs
expression: "JSONSelection::parse(\".data\")"
---
Err(
    JSONSelectionParseError {
        message: "Key paths cannot start with just .key (use $.key instead)",
        fragment: ".data",
        offset: 0,
    },
)
