apollo-federation/src/connectors/json_selection/snapshots/error_snapshots_v0_2-2.snap
---
source: apollo-federation/src/connectors/json_selection/parser.rs
expression: "JSONSelection::parse_with_spec(\"id $.object\", spec)"
---
Err(
    JSONSelectionParseError {
        message: "Named path selection must either begin with alias or ..., or end with subselection",
        fragment: "$.object",
        offset: 3,
        spec: V0_2,
    },
)
