apollo-federation/src/connectors/json_selection/snapshots/error_snapshots_v0_5-2.snap
---
source: apollo-federation/src/connectors/json_selection/parser.rs
expression: "JSONSelection::parse_with_spec(\"id $.object\", spec)"
---
Err(
    JSONSelectionParseError {
        message: "SubSelection cannot contain multiple elements if it contains an anonymous NamedSelection",
        fragment: "id $.object",
        offset: 0,
        spec: V0_5,
    },
)
